# minieigen

./: CMakeLists.txt
src/: common.hpp  expose-vectors.cpp  minieigen.cpp
src/double-conversion/: _test.cc  test.cc
